--- a/styles/index.css
+++ b/styles/index.css
@@ -2,3 +2,12 @@ body {
     margin: 0;
     overflow: hidden;
 }
+
+#credit {
+    position: absolute;
+    margin-top: calc(94dvh);
+    color: white;
+    width: 100%;
+    text-align: center;
+    opacity: 0.3;
+}
